build: also install licenses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,4 +243,8 @@ install(DIRECTORY data/Setups DESTINATION .)
 install(DIRECTORY data/TC DESTINATION .)
 
 # documentation
-install(FILES README.md LICENSE DESTINATION .)
+install(FILES README.md DESTINATION .)
+
+# licenses
+install(FILES LICENSE DESTINATION LICENSES)
+install(FILES data/TC/openliero/sounds/LICENSE RENAME LICENSE.SOUNDS DESTINATION LICENSES)
