--- a/tools/cmake/ConfigurePresetTemplates.json
+++ b/tools/cmake/ConfigurePresetTemplates.json
@@ -10,6 +10,8 @@
 			"cacheVariables": {
 				"CMAKE_C_STANDARD": "99",
 				"CMAKE_CXX_STANDARD": "11",
+				"CMAKE_CXX_STANDARD_REQUIRED": "ON",
+				"CMAKE_CXX_EXTENSIONS": "OFF",
 				"OPENLIERO_USE_VCPKG": "ON",
 				"OPENLIERO_BUILD_TCTOOL": "ON"
 			}
