--- a/src/gvl/CMakeLists.txt
+++ b/src/gvl/CMakeLists.txt
@@ -9,7 +9,7 @@ set(GVL_SOURCES
   src/containers/list.cpp
   src/io2/convert.cpp
   src/io2/stream.cpp
-  src/support/bits.c
+  src/support/bits.cpp
   src/support/debug.cpp
   src/support/platform.cpp
 )
