build: use LTO for Release builds only

--- a/tools/cmake/ConfigurePresetTemplates.json
+++ b/tools/cmake/ConfigurePresetTemplates.json
@@ -12,6 +12,8 @@
 				"CMAKE_CXX_STANDARD": "11",
 				"CMAKE_CXX_STANDARD_REQUIRED": "ON",
 				"CMAKE_CXX_EXTENSIONS": "OFF",
+				"CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG": "OFF",
+				"CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE": "ON",
 				"OPENLIERO_USE_VCPKG": "ON",
 				"OPENLIERO_BUILD_TCTOOL": "ON"
 			}
