build: enable installation of debug binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,12 +117,12 @@ if(OPENLIERO_BUILD_VIDEOTOOL)
 endif()
 
 # binaries
-install(TARGETS openliero CONFIGURATIONS Release DESTINATION .)
+install(TARGETS openliero CONFIGURATIONS ${CMAKE_CONFIGURATION_TYPES} DESTINATION .)
 if(OPENLIERO_BUILD_TCTOOL)
-  install(TARGETS tctool CONFIGURATIONS Release DESTINATION .)
+  install(TARGETS tctool CONFIGURATIONS ${CMAKE_CONFIGURATION_TYPES} DESTINATION .)
 endif()
 if(OPENLIERO_BUILD_VIDEOTOOL)
-  install(TARGETS videotool CONFIGURATIONS Release DESTINATION .)
+  install(TARGETS videotool CONFIGURATIONS ${CMAKE_CONFIGURATION_TYPES} DESTINATION .)
 endif()
 
 # assets
